fix: correct HttpSecurity and configure CORS for HTTPS support